# python-sphinx

./: LICENSE  pyproject.toml
docs/: conf.py  index.rst  sphinxy.rst
src/sphinxy/: riddle.py  sphinx.py
tests/: test_import.py
