[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxy"
description = "Examples for sphinx-tutorial"
dynamic = ["version"]
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Aya Elsayed", email = "ayah.ehab11@gmail.com" },
  { name = "Olga Matoula", email = "olgamatoula@gmail.com" },
]
dependencies = []

[tool.hatch.version]
path = "src/sphinxy/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sphinxy"]
